<resources>
    <string name="app_name">needleREmover</string>
    <string name="action_settings">Settings</string>
    <string name="ssl_button">SSL</string>
    <string name="text_button">Text</string>
    <string name="counter_button">Counter</string>
    <string name="show_text">Show</string>
    <string name="write_something">Write something</string>
    <string name="your_ad">For just 9,99 € your ad could be placed here as well.</string>
    <string name="StSt">Start/Stop</string>
    <string name="reset">Reset</string>
    <string name="text_desc">Checkout simple text maipulation</string>
    <string name="ssl_label">Dive into the world of encrypted connections!</string>
    <string name="counter_label">Play with a counter!</string>
    <string name="https_owasp_org">https://owasp.org</string>
    <string name="ssl_active">SSL active:</string>
    <string name="get">GET</string>
    <string name="no">NO</string>
    <string name="cert_valid">CERT valid:</string>
    <string name="textview">TextView</string>
    <string name="certificate_id">Certificate ID:</string>
    <string name="default_url">https://owasp.org</string>
    <string name="native_text">Native Text!</string>
    <string name="button_get_native">Get text from native lib!</string>
    <string name="intercept_access_to_native_libs">Intercept access to native libs!</string>
    <string name="native_txt">NATIVE</string>
</resources>
